# CMake-SDL-Basic-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: engine.h  engine_exports.h
engine/src/: engine.cpp
game/: CMakeLists.txt  main.cpp
